fix(gux-input-number): number input is now aligned to the right

--- a/src/components/stable/gux-form-field/components/gux-input-number/gux-input-number.less
+++ b/src/components/stable/gux-form-field/components/gux-input-number/gux-input-number.less
@@ -45,6 +45,7 @@ gux-input-number {
         align-self: auto;
         order: 0;
         color: @gux-black-50;
+        text-align: right;
         background-color: @gux-grey-90;
         border: none;
         outline: none;
